# Software-Defined-DMA-and-UART-Router

./: CMakeLists.txt  README.md
resources/: gtkterms.sh  structure.odp
resources/DiscoveryBoardConfigs/: boardBlue.cfg  boardGreen.cfg  boardYellow.cfg
src/: connection.cpp  connection.h  message.h  router.cpp  router.h
src/clients/: boardBlue.cpp  boardYellow.cpp
src/clients/modules/: client.cpp  client.h  clientConnection.cpp  clientConnection.h
